feat: adição de itens na página de produtos

--- a/produtos.html
+++ b/produtos.html
@@ -62,64 +62,122 @@
         define. Em cada peça, há mais do que tecido e tinta; há uma conexão direta com a nossa jornada musical. Mergulhe
         na loja agora e torne-se parte da experiência Pé de Boi!
       </p>
+
+      <!-- carrossel de promoções -->
+      <div id="carouselExampleCaptions" class="carousel slide align-self-center w-50 rounded-3 overflow-hidden"
+        data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/img/produtos/promo-camisa.png" class="d-block w-100 h-auto" alt="...">
+            <div class="carousel-caption d-none d-md-block text-bg-secondary rounded bg-opacity-50">
+              <h5>Promoção da Semana: Camiseta "Sons Rebelados"</h5>
+              <p>Vista-se com estilo por apenas R$ 59,99! Compre agora a camiseta Pé de Boi e faça parte da revolução
+                musical. 🎸👕</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/produtos/promo-vinil.png" class="d-block w-100 h-auto" alt="...">
+            <div class="carousel-caption d-none d-md-block text-bg-secondary rounded bg-opacity-50">
+              <h5>Vinil Exclusivo "Era de Ouro": Oferta Relâmpago</h5>
+              <p>Adquira o vinil Pé de Boi por apenas R$ 119,99! Leve para casa a nostalgia sonora e faça parte da nossa
+                jornada musical. 🎶🔊</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/produtos/promo-poster.png" class="d-block w-100 h-auto" alt="...">
+            <div class="carousel-caption d-none d-md-block text-bg-secondary rounded bg-opacity-50">
+              <h5>Autêntico Pôster Autografado: Promoção Imperdível</h5>
+              <p>Decore seu espaço com o pôster autografado "Epicêntrico Pé de Boi" por apenas R$ 199,99! Garanta essa
+                peça única antes que acabe. 🎸🖊️ </p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
 
     <!-- cards de produtos -->
     <div class="d-flex flex-wrap justify-content-around gap-4">
-      <!-- produto 1 -->
-      <div class="card text-bg-dark" style="width: 18rem;">
-        <img src="./assets/img/produtos.jpg" class="card-img-top" alt="...">
+      <!-- Camisa -->
+      <div class="card text-bg-dark" style="width: 22rem;">
+        <img src="./assets/img/produtos/camisa-pé-de-boi.png" class="card-img-top"
+          alt="Imagem ilustrativa da camiseta com a logo da banda">
         <div class="card-body">
-          <h5 class="card-title">Produto X</h5>
-          <p class="card-text">descrição do produto x falando qualquer coisa dele aqui</p>
+          <h5 class="card-title">Camisa "Sons Rebelados" Pé-de-Boi</h5>
+          <p class="card-text">Vista a atitude da nossa música com a camiseta "Sons Rebelados". Design marcante,
+            conforto inigualável. Conecte-se com o rock, vista Pé de Boi.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item text-bg-dark ">Preço: R$ XX, XX</li>
+          <li class="list-group-item text-bg-dark ">Preço: R$ 79,99</li>
         </ul>
         <div class="card-body">
           <a href="#" class="card-link">Comprar item</a>
         </div>
       </div>
 
-      <!-- produto 2 -->
-      <div class="card text-bg-dark" style="width: 18rem;">
-        <img src="./assets/img/produtos.jpg" class="card-img-top" alt="...">
+      <!-- Vinil -->
+      <div class="card text-bg-dark" style="width: 22rem;">
+        <img src="./assets/img/produtos/vinil-pé-de-boi.png" class="card-img-top"
+          alt="Imagem ilustrativa de um disco de vinil com a logo da banda">
         <div class="card-body">
-          <h5 class="card-title">Produto X</h5>
-          <p class="card-text">descrição do produto x falando qualquer coisa dele aqui</p>
+          <h5 class="card-title">Vinil Pé de Boi: Era de Ouro</h5>
+          <p class="card-text">Explore a magia do som analógico com nosso vinil "Era de Ouro". Este vinil é mais do que
+            música; é uma
+            jornada pelo passado, presente e futuro do Pé de Boi.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item text-bg-dark ">Preço: R$ XX, XX</li>
+          <li class="list-group-item text-bg-dark ">Preço: R$ 153, 88</li>
         </ul>
         <div class="card-body">
           <a href="#" class="card-link">Comprar item</a>
         </div>
       </div>
 
-      <!-- produto 3 -->
-      <div class="card text-bg-dark" style="width: 18rem;">
-        <img src="./assets/img/produtos.jpg" class="card-img-top" alt="...">
+      <!-- Poster autografado -->
+      <div class="card text-bg-dark" style="width: 22rem;">
+        <img src="./assets/img/produtos/poster-autografado-pé-de-boi.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Produto X</h5>
-          <p class="card-text">descrição do produto x falando qualquer coisa dele aqui</p>
+          <h5 class="card-title">Pôster Autografado "Epicêntrico Pé de Boi"</h5>
+          <p class="card-text">Testemunhe a energia pura do nosso som com o pôster autografado "Epicêntrico Pé de Boi".
+            Cada assinatura é um toque autêntico dos membros da banda, tornando este pôster mais do que uma peça de
+            decoração - é um fragmento visual dos nossos momentos épicos no palco.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item text-bg-dark ">Preço: R$ XX, XX</li>
+          <li class="list-group-item text-bg-dark ">Preço: R$ 259,99</li>
         </ul>
         <div class="card-body">
           <a href="#" class="card-link">Comprar item</a>
         </div>
       </div>
 
-      <!-- produto 4 -->
-      <div class="card text-bg-dark" style="width: 18rem;">
-        <img src="./assets/img/produtos.jpg" class="card-img-top" alt="...">
+      <!-- Jaqueta -->
+      <div class="card text-bg-dark" style="width: 22rem;">
+        <img src="./assets/img/produtos/jaqueta-pé-de-boi.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Produto X</h5>
-          <p class="card-text">descrição do produto x falando qualquer coisa dele aqui</p>
+          <h5 class="card-title">Jaqueta "Revolução Sonora" Pé de Boi</h5>
+          <p class="card-text">Elevando o seu estilo, a jaqueta "Revolução Sonora" da Pé de Boi é mais do que uma peça
+            de roupa, é uma afirmação de independência musical. Com um design exclusivo que reflete a intensidade única
+            da nossa sonoridade, esta jaqueta representa a fusão perfeita entre moda e música.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item text-bg-dark ">Preço: R$ XX, XX</li>
+          <li class="list-group-item text-bg-dark ">Preço: R$ 189,99</li>
         </ul>
         <div class="card-body">
           <a href="#" class="card-link">Comprar item</a>
