páginas de shows e agenda adicionada e modificações nas páginas anteriores

--- a/agenda.html
+++ b/agenda.html
@@ -16,7 +16,7 @@
   <title>Banda Pé de Boi</title>
 </head>
 
-<body class="">
+<body>
   <!-- navigation bar -->
   <nav class="navbar navbar-expand-lg bg-dark px-3 py-2" data-bs-theme="dark">
     <div class="container-fluid gap-2">
@@ -51,6 +51,143 @@
     </div>
   </nav>
 
+  <main class="text-white m-4 pb-5">
+    <div class="d-flex flex-column m-5 mb-3 gap-4">
+      <h1 class="fs-3">Agenda de Shows Pé de Boi: Mergulhe na Vibração ao Vivo!</h1>
+
+      <p>Confira as datas e garanta seu lugar para experiências sonoras intensas. A música está chamando - confira a
+        agenda e reserve seu ingresso agora! 🎸🤘</p>
+    </div>
+
+    <!-- shows disponíveis -->
+    <div class="d-flex flex-column gap-5">
+      <div class="d-flex flex-column gap-4">
+        <h2 class="fs-1 fw-bold align-self-center">2024</h2>
+
+        <div class="w-100 border-bottom px-5 my-0 pb-2 d-flex">
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>SEXTA 5 de Janeiro</h5>
+            <span class="fw-semibold text-danger">Ressonância Inicial</span>
+            <span class="">Estádio do Morumbi, São Paulo/SP</span>
+          </div>
+
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>SEXTA 12 de Janeiro</h5>
+            <span class="fw-semibold text-danger">Ecos do Maracanã</span>
+            <span class="">Estádio do Maracanã, Rio de Janeiro/RJ</span>
+          </div>
+
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>SEXTA 19 de Janeiro</h5>
+            <span class="fw-semibold text-danger">Melodia Mineira</span>
+            <span class="">Mineirão, Belo Horizonte/MG</span>
+          </div>
+
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>SEXTA 26 de Janeiro</h5>
+            <span class="fw-semibold text-danger">Sinfonia à Beira do Rio</span>
+            <span class="">Arena Pernambuco, Recife/PE</span>
+          </div>
+
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>QUINTA 31 de Janeiro</h5>
+            <span class="fw-semibold text-danger">A Harmonia de Salvador</span>
+            <span class="">Arena Fonte Nova, Salvador/BA</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="d-flex flex-column gap-5">
+        <div class="w-100 border-bottom px-5 my-0 pb-2 d-flex">
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>TERÇA 12 de Março</h5>
+            <span class="fw-semibold text-danger">Harmonia Celestial</span>
+            <span class="">Teatro Municipal, Belém/PA</span>
+          </div>
+
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>SEGUNDA 18 de Março</h5>
+            <span class="fw-semibold text-danger">Vibrações da Floresta</span>
+            <span class="">Arena da Amazônia, Manaus/AM</span>
+          </div>
+
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>DOMINGO 24 de Março</h5>
+            <span class="fw-semibold text-danger">Sinfonia no Deserto</span>
+            <span class="">Centro de Convenções, Brasília/DF</span>
+          </div>
+
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>SÁBADO 2 de Abril</h5>
+            <span class="fw-semibold text-danger">Ecos na Cidade Maravilhosa</span>
+            <span class="">Jeunesse Arena, Rio de Janeiro/RJ</span>
+          </div>
+
+          <div class="shows-link w-25 text-center d-flex flex-column">
+            <h5>SEXTA 8 de Abril</h5>
+            <span class="fw-semibold text-danger">Noite Estelar</span>
+            <span class="">Espaço das Américas, São Paulo/SP</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- últimos shows -->
+    <div class="d-flex flex-column gap-4 mt-5">
+      <h2 class="fs-1 fw-bold align-self-center">2023</h2>
+
+      <div class="w-100 border-bottom px-5 my-0 pb-2 d-flex text-secondary">
+        <div class="w-25 text-center d-flex flex-column">
+          <h5>DOMINGO 3 de Dezembro</h5>
+          <span class="fw-semibold">A Noite do Rock Místico</span>
+          <span class="">Teatro Nacional, Brasília/DF</span>
+          <span class="text-uppercase fw-bold">Encerrado</span>
+        </div>
+
+        <div class="w-25 text-center d-flex flex-column">
+          <h5>SÁBADO 9 de Dezembro</h5>
+          <span class="fw-semibold">Sons Sob as Estrelas</span>
+          <span class="">Anfiteatro Municipal, Florianópolis/SC</span>
+          <span class="text-uppercase fw-bold">Encerrado</span>
+        </div>
+
+        <div class="w-25 text-center d-flex flex-column">
+          <h5>SEXTA 15 de Dezembro</h5>
+          <span class="fw-semibold">Revolução Sonora na Praia</span>
+          <span class="">Praia de Copacabana, Rio de Janeiro/RJ</span>
+          <span class="text-uppercase fw-bold">Encerrado</span>
+        </div>
+
+        <div class="w-25 text-center d-flex flex-column">
+          <h5>QUINTA 21 de Dezembro</h5>
+          <span class="fw-semibold">Crescendo nas Montanhas</span>
+          <span class="">Centro de Eventos, Curitiba/PR</span>
+          <span class="text-uppercase fw-bold">Encerrado</span>
+        </div>
+
+        <div class="w-25 text-center d-flex flex-column">
+          <h5>QUARTA 27 de Dezembro</h5>
+          <span class="fw-semibold">Ecos Urbanos</span>
+          <span class="">Espaço das Américas, São Paulo/SP</span>
+          <span class="text-uppercase fw-bold">Encerrado</span>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="p-3 text-white bg-dark d-flex justify-content-between align-items-center w-100 fixed-bottom px-5">
+    <span>©2023 Banda Pé de Boi</span>
+
+    <!-- redes sociais -->
+    <div class="d-flex gap-3">
+      <a href="https://facebook.com/" target="_blank"><img src="assets/img/facebook.png" width="40px"
+          alt="Ícone do facebook"></a>
+      <a href="https://instagram.com/" target="_blank"><img src="assets/img/instagram.png" width="40px"
+          alt="Ícone do instagram"></a>
+      <a href="https://twitter.com/" target="_blank"><img src="assets/img/twitter.png" width="40px"
+          alt="Ícone do twitter"></a>
+    </div>
+  </footer>
 </body>
 
 </html>
