--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Banda Pé de Boi</title>
 </head>
 
-<body class="">
+<body>
   <!-- navigation bar -->
   <nav class="navbar navbar-expand-lg bg-dark px-3 py-2" data-bs-theme="dark">
     <div class="container-fluid gap-2">
@@ -189,8 +189,18 @@
     </div>
   </main>
 
-  <footer class="p-3 text-white bg-dark d-flex justify-content-center w-100">
-    ©2023 Banda Pé de Boi
+  <footer class="p-3 text-white bg-dark d-flex justify-content-between align-items-center w-100 px-5">
+    <span>©2023 Banda Pé de Boi</span>
+
+    <!-- redes sociais -->
+    <div class="d-flex gap-3">
+      <a href="https://facebook.com/" target="_blank"><img src="assets/img/facebook.png" width="40px"
+          alt="Ícone do facebook"></a>
+      <a href="https://instagram.com/" target="_blank"><img src="assets/img/instagram.png" width="40px"
+          alt="Ícone do instagram"></a>
+      <a href="https://twitter.com/" target="_blank"><img src="assets/img/twitter.png" width="40px"
+          alt="Ícone do twitter"></a>
+    </div>
   </footer>
 
 </body>
