--- a/produtos.html
+++ b/produtos.html
@@ -16,7 +16,7 @@
   <title>Banda Pé de Boi</title>
 </head>
 
-<body class="d-flex flex-column justify-content-between">
+<body>
   <!-- navigation bar -->
   <nav class="navbar navbar-expand-lg bg-dark px-3 py-2" data-bs-theme="dark">
     <div class="container-fluid gap-2">
@@ -51,7 +51,7 @@
     </div>
   </nav>
 
-  <main class="text-white mx-4 my-4">
+  <main class="text-white m-4 mb-5">
     <div class="d-flex flex-column m-5 gap-4">
       <h1 class="fs-3">Leve um pouco da banda com você...</h1>
 
@@ -114,7 +114,7 @@
     </div>
 
     <!-- cards de produtos -->
-    <div class="d-flex flex-wrap justify-content-around gap-4">
+    <div class="d-flex flex-wrap justify-content-around gap-4 mb-4">
       <!-- Camisa -->
       <div class="card text-bg-dark" style="width: 22rem;">
         <img src="./assets/img/produtos/camisa-pé-de-boi.png" class="card-img-top"
@@ -186,8 +186,18 @@
     </div>
   </main>
 
-  <footer class="p-3 text-white bg-dark d-flex justify-content-center w-100">
-    ©2023 Banda Pé de Boi
+  <footer class="p-3 text-white bg-dark d-flex justify-content-between align-items-center w-100 px-5">
+    <span>©2023 Banda Pé de Boi</span>
+
+    <!-- redes sociais -->
+    <div class="d-flex gap-3">
+      <a href="https://facebook.com/" target="_blank"><img src="assets/img/facebook.png" width="40px"
+          alt="Ícone do facebook"></a>
+      <a href="https://instagram.com/" target="_blank"><img src="assets/img/instagram.png" width="40px"
+          alt="Ícone do instagram"></a>
+      <a href="https://twitter.com/" target="_blank"><img src="assets/img/twitter.png" width="40px"
+          alt="Ícone do twitter"></a>
+    </div>
   </footer>
 </body>
 
