--- a/shows.html
+++ b/shows.html
@@ -51,6 +51,103 @@
     </div>
   </nav>
 
+  <main class="d-flex flex-column text-white pb-5">
+    <div class="d-flex flex-column m-5 gap-4">
+      <h1 class="fs-3">Retrospectiva de Shows Inesquecíveis</h1>
+
+      <p>
+        Reviva os momentos épicos que fizeram história! Nossa "Retrospectiva de Shows Inesquecíveis" é uma homenagem aos
+        momentos em que a música se transformou em memórias duradouras. De "A Noite do Rock Místico" no Teatro Nacional,
+        Brasília/DF, em 03/12/2023, a outras paradas memoráveis, cada show é uma peça fundamental do nosso legado
+        musical. Mergulhe na nostalgia e celebre conosco essas experiências sonoras extraordinárias que já fizeram parte
+        do nosso percurso. 🎶📅 #RetrospectivaPédeBoi #MemóriasMusicais
+      </p>
+    </div>
+
+    <!-- Cards dos shows -->
+    <div class="d-flex gap-5 flex-wrap w-75 align-self-center justify-content-evenly mb-5">
+      <div class="card mb-3 text-bg-dark" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="assets/img/band-image-7.jpeg" class="img-fluid rounded-start"
+              alt="Imagem da banda no show em questão">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Ecos na Cidade Maravilhosa</h5>
+              <p class="card-text">Reviva a magia do show realizado em 02/04/2024 na Jeunesse Arena, Rio de Janeiro/RJ.
+                Uma noite inesquecível de rock, onde o Pé de Boi transformou a cidade em um palco vibrante. 🎸🌆</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3 text-bg-dark " style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="assets/img/band-image-5.jpeg" class="img-fluid rounded-start"
+              alt="Imagem da banda no show em questão">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">A Noite do Rock Místico</h5>
+              <p class="card-text">Reviva a magia do show realizado em 03/12/2023 no Teatro Nacional, Brasília/DF. Uma
+                noite envolta em mistério, onde o Pé de Boi transformou cada acorde em uma jornada musical mística. 🎸🔮
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3 text-bg-dark " style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="assets/img/band-image-6.jpeg" class="img-fluid rounded-start h-100"
+              alt="Imagem da banda no show em questão">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Revolução Sonora na Praia</h5>
+              <p class="card-text">Mergulhe na energia do show realizado em 15/12/2023 na Praia de Copacabana, Rio de
+                Janeiro/RJ. Uma revolução sonora à beira-mar, onde o Pé de Boi transformou a praia em um palco de puro
+                rock. 🎸🏖️</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3 text-bg-dark " style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="assets/img/band-image-4.jpeg" class="img-fluid rounded-start h-100"
+              alt="Imagem da banda no show em questão">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Crescendo nas Montanhas</h5>
+              <p class="card-text">Reviva a intensidade do show realizado em 21/12/2023 no Centro de Eventos,
+                Curitiba/PR. Uma noite de crescendo musical, onde o Pé de Boi conquistou as montanhas com sua paixão
+                pelo rock. 🏔️🎵</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="p-3 text-white bg-dark d-flex justify-content-between align-items-center w-100 fixed-bottom px-5">
+    <span>©2023 Banda Pé de Boi</span>
+
+    <!-- redes sociais -->
+    <div class="d-flex gap-3">
+      <a href="https://facebook.com/" target="_blank"><img src="assets/img/facebook.png" width="40px"
+          alt="Ícone do facebook"></a>
+      <a href="https://instagram.com/" target="_blank"><img src="assets/img/instagram.png" width="40px"
+          alt="Ícone do instagram"></a>
+      <a href="https://twitter.com/" target="_blank"><img src="assets/img/twitter.png" width="40px"
+          alt="Ícone do twitter"></a>
+    </div>
+  </footer>
 </body>
 
 </html>
